--- a/angularjs/components/cart/cartSummary.html
+++ b/angularjs/components/cart/cartSummary.html
@@ -8,9 +8,12 @@
         margin-right: 10px;
     }
 </style>
+
+<!--The div for cart summary starts here-->
 <div class="navbar-right">
     <div class="navbar-text">
         <b>Your cart:</b> {{itemCount()}} item(s), {{total() | currency}}
     </div>
     <a class="btn btn-default navbar-btn" href="#/checkout">Checkout</a>
 </div>
+<!--The div fo cart summary ends here-->
