--- a/angularjs/views/placeOrder.html
+++ b/angularjs/views/placeOrder.html
@@ -17,7 +17,7 @@
 
 <p>Please enter your details and we will ship your details right away</p>
 
-
+<!--The form to submit shipping details starts here-->
 <form name="shippingForm" novalidate>
     <div class="well">
 
@@ -60,3 +60,4 @@
 
     </div>
 </form>
+<!--The form to submit shipping details ends here-->
