--- a/angularjs/views/checkoutSummary.html
+++ b/angularjs/views/checkoutSummary.html
@@ -1,13 +1,17 @@
-﻿<h2>Your cart</h2>
+﻿
+<h2>Your cart</h2>
 
 <div ng-controller="cartSummaryController">
 
+    <!--The alert div for no products selected starts here-->
     <div class="alert alert-warning" ng-show="cartData.length ==0 ">
         There are no products in your shopping cart
         <a href="#/products" class="alert-link">Click here to return to the catalogue</a>
     </div>
+    <!--The alert div for no products selected ends here-->
 
 
+    <!--The table for showing checkoout items starts here-->
     <div ng-hide="cartData.length ==0">
         <table class="table">
             <thead>
@@ -38,7 +42,10 @@
 
             </tfoot>
         </table>
+        <!--The table for showing checkoout items ends here-->
 
+
+        <!--These buttons are for navigation-->
         <div class="text-center">
             <a class="btn btn-primary" href="#/products">Continue Shopping</a>
             <a class="btn btn-primary" href="#/placeorder">Place Order now</a>
